# ci-tests-docker

.github/workflows/: ci.yml
docker/: pyproject.toml  test.py
